Provided a bundle of fixes: fixed nav color for all devices  and alignment for desktop. fixed animations for better transition. fixed images to be all circular. fixed fonts...and more

--- a/index.css
+++ b/index.css
@@ -2,15 +2,25 @@
     margin: 0;
     padding: 0;
     /* border: 1px solid red; */
+    scroll-padding-top: 80px;
 }
+
 @font-face {
-    font-family: "Merriweather";
-    src: url("/fonts/u-4l0qyriQwlOrhSvowK_l5-eR71Wsf_hP3hPGWH.ttf") format("truetype");
+    font-family: "Roboto Condensed Bold";
+    src: url("/fonts/roboto-condensed-webfont/RobotoCondensed-Bold.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Lato";
-    src: url("/fonts/S6uyw4BMUTPHvxk6XweuBCY.ttf") format("truetype");
+    font-family: "Roboto Condensed Bold Italic";
+    src: url("/fonts/roboto-condensed-webfont/RobotoCondensed-BoldItalic.woff") format("woff");
 }
+
+@font-face {
+    font-family: "Roboto Condensed Regular";
+    src: url("/fonts/roboto-condensed-webfont/RobotoCondensed-Regular.woff") format("woff");
+}
+
+
 
 @keyframes pulse {
     0% { transform: scale(1); }
@@ -20,10 +30,10 @@
 
 :root {
     --dark-charcoal: #1A1A1A;
+    --charcoal: #333333;
     --almost-black: #0D0D0D;
     --light-gray: #D1D1D1;
     --gold: #FFC107;
-    --deep-navy: #1E2A38;
 }
 
 body {
@@ -33,19 +43,26 @@ body {
 }
 
 body *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6) {
-    font-family: "Lato", sans-serif;
+    font-family: "Roboto Condensed Regular", sans-serif;
+    font-size: large;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Merriweather", serif;
-    color: var(--gold);
-}
 h1 {
-    font-size: xx-large;
+    font-size: xxx-large;
+    font-family: "Roboto Condensed Bold", serif;
+    color: var(--gold);
 }
 
 h2 {
+    font-size: xx-large;
+    font-family: "Roboto Condensed Bold Italic", serif;
+    color: var(--gold);
+}
+
+h3 {
     font-size: x-large;
+    font-family: "Roboto Condensed Bold", serif;
+    color: var(--gold);
 }
 
 header, footer {
@@ -59,7 +76,7 @@ p, footer {
 hr {
     border: 2.5px solid var(--light-gray);
     border-radius: 10px;
-    width: 150px;
+    width: 135px;
 }
 
 /*******************************************************************************/
@@ -68,20 +85,19 @@ hr {
 
     .nav-bar ul {
         position: fixed;
+        z-index: 10;
         top: 0;
         width: 100%;
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: var(--deep-navy);
+        background-color: var(--charcoal);
+        display: flex;
+        justify-content: center;
     }
     .nav-bar ul li:first-child {
         display: none;
-    }
-    
-    .nav-bar ul li {
-        float: left;
     }
     
     .nav-bar ul li a {
@@ -111,7 +127,7 @@ hr {
         border-radius: 100%;
         margin: 15px;
         border: 2.5px solid var(--dark-charcoal);
-        box-shadow: 0 0 10px 4px var(--dark-charcoal);
+        box-shadow: 0 0 10px 4px var(--light-gray);
     }
 
     #contact-me, #about-me, #education, #skills, #projects {
@@ -126,7 +142,7 @@ hr {
         flex-direction: row;
         justify-content: space-between;
         text-align: center;
-        margin: 5px 0 5px 0;
+        margin: 15px 0 5px 0;
     }
     
     #contact-me ul li {
@@ -138,14 +154,14 @@ hr {
     }
     
     #contact-me ul li a img {
-        transition: background-color 0.5s ease-in-out;
+        transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
         border-radius: 50%;
         width: 75%;
         height: auto;
     }
     
     #contact-me ul li a img:hover {
-        animation: pulse 0.5s infinite;
+        animation: pulse 1s infinite;
         box-shadow: 0 0 12.5px 2px var(--gold);
         background-color: var(--light-gray);
     }
@@ -187,11 +203,11 @@ hr {
         padding: 2px;
         background-color: var(--light-gray);
         border-radius: 50%;
-        transition: background-color 0.5s ease-in-out;
+        transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
     }
     
     #ucsd-container a img:hover, #ivc-container a img:hover {
-        animation: pulse 0.5s infinite;
+        animation: pulse 1s infinite;
         background-color: var(--almost-black);
         box-shadow: 0 0 10px 3px var(--gold);
     }
@@ -210,6 +226,7 @@ hr {
             border-radius: 50%;
             width: 35%;
             height: auto;
+            transition: filter 0.5s ease-in-out, transform 0.5s ease-in-out;
         }
     }
 
@@ -227,11 +244,13 @@ hr {
             border-radius: 50%;
             width: 45%;
             height: auto;
+            transition: filter 0.5s ease-in-out, transform 0.5s ease-in-out;
         }
     }
 
     #skills-container img:hover {
-        animation: pulse 0.5s infinite;
+        transform: scale(1.1);
+        animation: pulse 1s ease-in-out infinite;
         filter: drop-shadow(0 0 15px var(--gold));
     }
     
@@ -271,10 +290,12 @@ hr {
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        transition: box-shadow 0.5s ease-in-out, transform 0.3s ease-in-out;
     }
 
     #cpu-isa:hover, #nachos-os:hover, #multi-platform-post-scheduler:hover, #graphics-shadow-mapping:hover, #professional-site:hover {
         box-shadow: 0 0 15px 2px var(--light-gray);
+        transform: scale(1.03);
     }
     
     #cpu-isa p, #nachos-os p, #multi-platform-post-scheduler p, #graphics-shadow-mapping p, #professional-site p {
@@ -298,14 +319,15 @@ hr {
         max-height: 75%;
         margin-top: 10px;
         height: auto;
-        transition: background-color 0.5s ease-in-out;
         background-color: var(--light-gray);
         border-radius: 100%;
         display: block;
+        transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out, transform 0.5s ease-in-out;
     }
     
     #cpu-isa img:hover, #nachos-os img:hover, #multi-platform-post-scheduler img:hover, #graphics-shadow-mapping img:hover, #professional-site img:hover {
-        animation: pulse 0.5s infinite;
+        transform: scale(1.1);
+        animation: pulse 1s ease-in-out infinite;
         background-color: var(--gold);
         box-shadow: 0 0 12.5px 2px var(--light-gray);
     }
@@ -323,7 +345,7 @@ hr {
 /* Tablet CSS*/
 @media screen and (min-width: 600px) and (max-width: 1024px) {
     .nav-bar ul {
-        background-color: var(--deep-navy);
+        background-color: var(--charcoal);
         padding: 5px 0 15px 0;
         position: fixed;
         width: 100%;
@@ -391,7 +413,7 @@ hr {
     }
     
     #hamburger-menu:active, #hamburger-menu:active:before, #hamburger-menu:active:after {
-        background-color: var(--deep-navy);
+        background-color: var(--charcoal);
     }
 
     #hamburger-menu.hamburger-x {
@@ -601,7 +623,7 @@ hr {
 /* Mobile CSS*/
 @media screen and (max-width: 599px) {
     .nav-bar ul {
-        background-color: var(--deep-navy);
+        background-color: var(--charcoal);
         padding: 5px 0 15px 0;
         position: fixed;
         width: 100%;
@@ -669,7 +691,7 @@ hr {
     }
 
     #hamburger-menu:active, #hamburger-menu:active:before, #hamburger-menu:active:after {
-        background-color: var(--deep-navy);
+        background-color: var(--charcoal);
     }
 
     #hamburger-menu.hamburger-x {
